@@ -1,6 +1,6 @@
 [submodule "ext/json-spirit"]
 	path = ext/json-spirit
-	url = https://github.com/sirikata/json-spirit.git
+	url = https://github.com/mickem/json-spirit.git
 [submodule "ext/tinyxml2"]
 	path = ext/tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
