@@ -13,15 +13,19 @@ ENDIF(COMMAND CMAKE_POLICY)
 #
 #############################################################################
 IF(NSCP_CMAKE_CONFIG)
+	MESSAGE(STATUS "Reading custom variables from: ${NSCP_CMAKE_CONFIG}")
 	INCLUDE(${NSCP_CMAKE_CONFIG})
+ELSEIF(EXISTS ${CMAKE_SOURCE_DIR}/build.cmake)
+	MESSAGE(STATUS "Reading custom variables from: ${CMAKE_SOURCE_DIR}/build.cmake")
+	INCLUDE(${CMAKE_SOURCE_DIR}/build.cmake)
+ELSEIF(EXISTS ${PROJECT_BINARY_DIR}/../build.cmake)
+	MESSAGE(STATUS "Reading custom variables from: ${PROJECT_BINARY_DIR}/../build.cmake")
+	INCLUDE(${PROJECT_BINARY_DIR}/../build.cmake)
+ELSEIF(EXISTS ${PROJECT_BINARY_DIR}/build.cmake)
+	MESSAGE(STATUS "Reading custom variables from: ${PROJECT_BINARY_DIR}/build.cmake")
+	INCLUDE(${PROJECT_BINARY_DIR}/build.cmake)
 ELSE(NSCP_CMAKE_CONFIG)
-	IF(EXISTS ${CMAKE_SOURCE_DIR}/build.cmake)
-		MESSAGE(STATUS "Reading custom variables from: ${CMAKE_SOURCE_DIR}/build.cmake")
-		INCLUDE(${CMAKE_SOURCE_DIR}/build.cmake)
-	ELSEIF(EXISTS ${PROJECT_BINARY_DIR}/build.cmake)
-		MESSAGE(STATUS "Reading custom variables from: ${PROJECT_BINARY_DIR}/build.cmake")
-		INCLUDE(${PROJECT_BINARY_DIR}/build.cmake)
-	ENDIF(EXISTS ${CMAKE_SOURCE_DIR}/build.cmake)
+	MESSAGE(STATUS "NO build configuration found")
 ENDIF(NSCP_CMAKE_CONFIG)
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/build/cmake;${CMAKE_MODULE_PATH}")
