@@ -43,6 +43,17 @@ FOREACH(FIL ${ARGN})
 	LIST(APPEND ARGS --lua_out ${PROJECT_BINARY_DIR}/libs/lua_pb ${PROTOC_GEN_LUA_EXTRA})
   ENDIF(PROTOC_GEN_LUA_FOUND)
   
+IF(WIN32)
+	SET(ENV{PYTHON} ${PYTHON_EXECUTABLE})
+  ADD_CUSTOM_COMMAND(
+	OUTPUT ${${VAR}} ${INCL} ${PROJECT_BINARY_DIR}/scripts/python/lib/${FIL_WE}_pb2.py
+	COMMAND SET PYTHON=${PYTHON_EXECUTABLE}
+	COMMAND ${PROTOBUF_PROTOC_EXECUTABLE}
+	ARGS ${ARGS}
+		--proto_path ${CMAKE_CURRENT_SOURCE_DIR} ${ABS_FIL}
+	DEPENDS ${ABS_FIL}
+	COMMENT "Running protocol buffer compiler on ${FIL} (PY)" VERBATIM )
+ELSE(WIN32)
   ADD_CUSTOM_COMMAND(
 	OUTPUT ${${VAR}} ${INCL} ${PROJECT_BINARY_DIR}/scripts/python/lib/${FIL_WE}_pb2.py
 	COMMAND  ${PROTOBUF_PROTOC_EXECUTABLE}
@@ -50,6 +61,7 @@ FOREACH(FIL ${ARGN})
 		--proto_path ${CMAKE_CURRENT_SOURCE_DIR} ${ABS_FIL}
 	DEPENDS ${ABS_FIL}
 	COMMENT "Running protocol buffer compiler on ${FIL} - ${PROTOBUF_PROTOC_EXECUTABLE}" VERBATIM )
+ENDIF(WIN32)
 
   SET_SOURCE_FILES_PROPERTIES(${${VAR}} ${INCL} PROPERTIES GENERATED TRUE)
 ENDFOREACH(FIL)
